# Search-engine

search-engine/: CMakeLists.txt
search-engine/include/: ConverterJSON.h  InvertedIndex.h  SearchServer.h
search-engine/src/: CMakeLists.txt  ConverterJSON.cpp  InvertedIndex.cpp  SearchServer.cpp  main.cpp
search_engine/: CMakeLists.txt  README.md
search_engine/config/: requests.json
search_engine/include/: converter_json.h  inverted_index.h  search_server.h
search_engine/resource/: file003.txt
search_engine/src/: CMakeLists.txt  converter.cpp  inverted_index.cpp  main.cpp  server.cpp
search_engine/tests/: CMakeLists.txt  index_tests.cpp  server_tests.cpp
